--- a/views/beach/new.ejs
+++ b/views/beach/new.ejs
@@ -20,10 +20,10 @@
       <a href="/beach">
         <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/2347/2347758.png" alt="">
       </a>
-      <a href="">
+      <a href="/mountain">
         <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/281/281568.png" alt="">
       </a>
-      <a href="">
+      <a href="/urban">
         <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/63/63610.png" alt="">
       </a>
     </div>
@@ -49,7 +49,7 @@
       <label for="area">Provide a desctiption  of how to get there
         <!-- <input type="textarea" name="area" id=""> -->
         <textarea name="area" id="" cols="30" rows="10">
-          
+
         </textarea>
       </label>
       <br>
