--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,10 +22,10 @@
       <a href="/beach">
         <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/2347/2347758.png" alt="">
       </a>
-      <a href="">
+      <a href="/mountain">
         <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/281/281568.png" alt="">
       </a>
-      <a href="">
+      <a href="/urban">
         <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/63/63610.png" alt="">
       </a>
     </div>
@@ -61,7 +61,7 @@
       trail itself for people who need to get out of the city and into the fresh air. 
     </p>
     <div class="container">
-      <a href="/beach" style="float:left" id="beachAnchor" >
+      <a href="/mountain" style="float:left" id="beachAnchor" >
         <img id="oceanPic" src="https://cdn-icons-png.flaticon.com/512/3175/3175239.png" alt="Learn More">
         <div class="centered">
           See Locations !
@@ -72,7 +72,7 @@
 
   <div id="indexBeach">
     <div class="container">
-      <a href="/beach" style="float:left" id="beachAnchor" >
+      <a href="/urban" style="float:left" id="beachAnchor" >
         <img id="oceanPic" src="https://cdn-icons-png.flaticon.com/512/4284/4284890.png" alt="Learn More">
         <div class="centered">
           See Locations !
@@ -96,6 +96,7 @@
     
 <br>
   <ul class="circles">
+    <li></li>
     <li></li>
     <li></li>
     <li></li>
