--- a/views/beach/show.ejs
+++ b/views/beach/show.ejs
@@ -21,10 +21,10 @@
       <a href="/beach">
         <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/2347/2347758.png" alt="">
       </a>
-      <a href="">
+      <a href="/mountain">
         <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/281/281568.png" alt="">
       </a>
-      <a href="">
+      <a href="/urban">
         <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/63/63610.png" alt="">
       </a>
     </div>
