--- a/views/beach/new.ejs
+++ b/views/beach/new.ejs
@@ -59,7 +59,7 @@
 
   <div id="homeGroup">
     <a href="/beach">Back to Beaches</a>
-    <a href=",">Home</a>
+    <a href="/">Home</a>
   </div>
 
 
