--- a/views/beach/show.ejs
+++ b/views/beach/show.ejs
@@ -35,10 +35,10 @@
   </h1>
   <ul>
     <li id="beachList">
-      <%= beach.level %> 
+      Difficulty: <%= beach.level %> 
     </li>
     <li id="beachList">
-      <%= beach.gear %> 
+      Gear needed: <%= beach.gear %> 
     </li>
   </ul>
   <div id="beachDiv">
