--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,8 +82,7 @@
       
     <p id="sectionIntro">
       The final section will be exploring a different kind of area all together, that which is man made.
-      The urban explorers guide to all things abandonded and forgoten. This is inclusive of all stuctures in and around the city; 
-      bridges and airplane grave yards, from old factories to empty theme parks and all that falls bewteen. For those who are even more daring this is not limited to locations above the ground, but also below it.. 
+      The urban explorers guide to all things abandonded and forgoten. This is inclusive of all stuctures in and around the city; bridges or airplane grave yards, from old factories to empty theme parks and all that falls bewteen. 
     </p>
   </div>
 
