--- a/views/urban/show.ejs
+++ b/views/urban/show.ejs
@@ -9,7 +9,7 @@
 </head>
 <body class="area">
 
-  <div id="beachBar">
+  <div id="urbanBar">
     <h1 class="header"> 
       Urban Exploring !
     </h1>
@@ -34,10 +34,10 @@
     <%= urban.title %>
   </h1>
   <ul>
-    <li id="beachList">
+    <li >
       <%= urban.level %> 
     </li>
-    <li id="beachList">
+    <li>
       <%= urban.gear %> 
     </li>
   </ul>
@@ -51,8 +51,8 @@
   
 
   <div id="homeGroup">
-    <a href="/beach/<%= beach.id %>/edit"> Click to Edit</a>
-    <a href="/beach">BACK</a>
+    <a href="/urban/<%= urban.id %>/edit"> Click to Edit</a>
+    <a href="/urban">BACK</a>
   </div>
 
   <ul class="circles">
