--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,9 @@
       <a href="/urban">
         <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/63/63610.png" alt="">
       </a>
+      <a href="">
+        <img class="headIcon" src="https://cdn-icons-png.flaticon.com/512/1865/1865153.png" alt="">
+      </a>
     </div>
 
   </div>
